--- a/INICIO.html
+++ b/INICIO.html
@@ -166,7 +166,7 @@ Recursos
 		</tr>
 </table>
 </ul>
-<div id="footer"><center><FONT FACE="Arial, sans-serif" SIZE=5 COLOR="#E6F4F8">Irwing Aaron Tello Viera</FONT></center></div>
+<div id="footer"><center><FONT FACE="Arial, sans-serif" SIZE=5 COLOR="#E6F4F8">Irwing Tello</FONT></center></div>
 </body>
 
 </html>
